--- a/SRC/Feu.html
+++ b/SRC/Feu.html
@@ -45,81 +45,81 @@
     <div id="ingenieur">
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Zaiross_Icon.png" /></a>
+            <a><img class="efrei" title="ZAIROSS" src="../image/Monstres/Feu/Zaiross_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Brandia_Icon.png" /></a>
+            <a><img class="efrei" title="BRANDIA" src="../image/Monstres/Feu/Brandia_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Perna_Icon.png" /></a>
+            <a><img class="efrei" title="PERNA" src="../image/Monstres/Feu/Perna_Icon.png" /></a>
 
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Daphnis_Icon.png" /></a>
+            <a><img class="efrei" title="DAPHNIS" src="../image/Monstres/Feu/Daphnis_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres//Feu/Raki_Icon.png" /></a>
+            <a><img class="efrei" title="RAKI" src="../image/Monstres//Feu/Raki_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Tesarion_Icon.png" /></a>
+            <a><img class="efrei" title="TESARION" src="../image/Monstres/Feu/Tesarion_Icon.png" /></a>
         </div>
 
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Antares_Icon.png" /> </a>
+            <a><img class="efrei" title="ANTARES" src="../image/Monstres/Feu/Antares_Icon.png" /> </a>
 
         </div>
 
-
-
-
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Feu/Garo_Icon.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Feu/Hwa_Icon.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Feu/Shaina.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Feu/Kahli_Icon.png" /></a>
-        </div>
 
 
 
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Raoq_Icon.png" /></a>
+            <a><img class="efrei" title="GARO" src="../image/Monstres/Feu/Garo_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="HWA" src="../image/Monstres/Feu/Hwa_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="SHAINA" src="../image/Monstres/Feu/Shaina.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="KAHLI" src="../image/Monstres/Feu/Kahli_Icon.png" /></a>
+        </div>
+
+
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="RAOQ" src="../image/Monstres/Feu/Raoq_Icon.png" /></a>
 
         </div>
 
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Bulldozer_Icon.png" /></a>
+            <a><img class="efrei" title="BULLDOZER" src="../image/Monstres/Feu/Bulldozer_Icon.png" /></a>
 
         </div>
 
@@ -136,39 +136,39 @@
     <div id="ingenieur">
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Kumar_Icon.png" /></a>
+            <a><img class="efrei" title="KUMAR" src="../image/Monstres/Feu/Kumar_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Laika_Icon.png" /></a>
+            <a><img class="efrei" title="LAIKA" src="../image/Monstres/Feu/Laika_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Mei_Hou_Wang_Icon.png" /></a>
+            <a><img class="efrei" title="MEI HOU WANG" src="../image/Monstres/Feu/Mei_Hou_Wang_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Rakan_Icon.png" /></a>
+            <a><img class="efrei" title="RAKAN" src="../image/Monstres/Feu/Rakan_Icon.png" /></a>
 
         </div>
 
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Velajuel_Icon.png" /></a>
+            <a><img class="efrei" title="VELAJUEL" src="../image/Monstres/Feu/Velajuel_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Xiong_Fei_Icon.png" /></a>
+            <a><img class="efrei" title="XIONG FEI " src="../image/Monstres/Feu/Xiong_Fei_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Vanessa_Icon.png" /></a>
+            <a><img class="efrei" title="VANESSA" src="../image/Monstres/Feu/Vanessa_Icon.png" /></a>
         </div>
 
 
@@ -186,51 +186,51 @@
     <div id="ingenieur">
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Juno_Icon.png" /></a>
+            <a><img class="efrei" title="JUNO" src="../image/Monstres/Feu/Juno_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Chloe_Icon.png" /></a>
-
-        </div>
-
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Feu/Hwahee_Icon.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Feu/Khmun_Icon.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Feu/Verdehile_Icon.png" /></a>
-
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Feu/Lisa_Icon.png" /></a>
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Feu/Racuni_Icon.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Feu/Spectra_Icon.png" /></a>
+            <a><img class="efrei" title="CHLOE" src="../image/Monstres/Feu/Chloe_Icon.png" /></a>
 
         </div>
 
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Colleen_Icon.png" /></a>
+            <a><img class="efrei" title="HWAHEE" src="../image/Monstres/Feu/Hwahee_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="KHMUN" src="../image/Monstres/Feu/Khmun_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="VERDEHILE" src="../image/Monstres/Feu/Verdehile_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="LISA" src="../image/Monstres/Feu/Lisa_Icon.png" /></a>
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="RACUNI" src="../image/Monstres/Feu/Racuni_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="SPECTRA" src="../image/Monstres/Feu/Spectra_Icon.png" /></a>
+
+        </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="COLLEEN" src="../image/Monstres/Feu/Colleen_Icon.png" /></a>
         </div>
 
 
@@ -246,30 +246,30 @@
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Chiwu_Icon.png" /></a>
+            <a><img class="efrei" title="CHIWU" src="../image/Monstres/Feu/Chiwu_Icon.png" /></a>
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Okeanos_Icon.png" /></a>
+            <a><img class="efrei" title="OKEANOS" src="../image/Monstres/Feu/Okeanos_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Rica_Icon.png" /></a>
+            <a><img class="efrei" title="RICA" src="../image/Monstres/Feu/Rica_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Sekhmet_Icon.png" /></a>
+            <a><img class="efrei" title="SEKHMET" src="../image/Monstres/Feu/Sekhmet_Icon.png" /></a>
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/maruna.png" /></a>
+            <a><img class="efrei" title="MARUNA" src="../image/Monstres/Feu/maruna.png" /></a>
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Feu/Baretta_Icon.png" /></a>
+            <a><img class="efrei" title="BARETTA" src="../image/Monstres/Feu/Baretta_Icon.png" /></a>
         </div>
 
 
