--- a/SRC/Lumiere.html
+++ b/SRC/Lumiere.html
@@ -46,64 +46,64 @@
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Elenoa_Icon.png" /></a>
+            <a><img class="efrei" title="ELENOA" src="../image/Monstres/Lumiere/Elenoa_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Eludia_Icon.png" /></a>
+            <a><img class="efrei" title="ELUDIA" src="../image/Monstres/Lumiere/Eludia_Icon.png" /></a>
         </div>
 
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Zerath_Icon.png" /></a>
+            <a><img class="efrei" title="ZERATH" src="../image/Monstres/Lumiere/Zerath_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Oberon_Icon.png" /></a>
+            <a><img class="efrei" title="OBERON" src="../image/Monstres/Lumiere/Oberon_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Asima_Icon.png" /></a>
+            <a><img class="efrei" title="ASIMA" src="../image/Monstres/Lumiere/Asima_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Bailey_Icon.png" /></a>
+            <a><img class="efrei" title="BAILEY" src="../image/Monstres/Lumiere/Bailey_Icon.png" /></a>
 
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Deva_Icon.png" /></a>
+            <a><img class="efrei" title="DEVA" src="../image/Monstres/Lumiere/Deva_Icon.png" /></a>
         </div>
-
-
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Emily.png" /> </a>
-
-        </div>
-
-
 
 
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Liu_Mei_Icon.png" /></a>
+            <a><img class="efrei" title="EMILY" src="../image/Monstres/Lumiere/Emily.png" /> </a>
+
+        </div>
+
+
+
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="LIU MEI" src="../image/Monstres/Lumiere/Liu_Mei_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Lyn_Icon.png" /></a>
+            <a><img class="efrei" title="LYN" src="../image/Monstres/Lumiere/Lyn_Icon.png" /></a>
 
         </div>
 
@@ -120,41 +120,41 @@
     <div id="ingenieur">
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Akroma_Icon.png" /></a>
+            <a><img class="efrei" title="AKROMA" src="../image/Monstres/Lumiere/Akroma_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Artamiel_Icon.png" /></a>
+            <a><img class="efrei" title="ARTAMIEL" src="../image/Monstres/Lumiere/Artamiel_Icon.png" /></a>
         </div>
 
 
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Jager_Icon.png" /></a>
+            <a><img class="efrei" title="JAGER" src="../image/Monstres/Lumiere/Jager_Icon.png" /></a>
 
         </div>
 
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Qitian_Dasheng_Icon.png" /></a>
+            <a><img class="efrei" title="QITIAN DASHENG" src="../image/Monstres/Lumiere/Qitian_Dasheng_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Shan_Icon.png" /></a>
+            <a><img class="efrei" title="SHAN" src="../image/Monstres/Lumiere/Shan_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Shazam_Icon.png" /></a>
+            <a><img class="efrei" title="SHAZAM" src="../image/Monstres/Lumiere/Shazam_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Halphas_Icon.png" /></a>
+            <a><img class="efrei" title="HALPHAS" src="../image/Monstres/Lumiere/Halphas_Icon.png" /></a>
         </div>
 
 
@@ -173,80 +173,80 @@
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Nigong_Icon.png" /></a>
+            <a><img class="efrei" title="NIGONG" src="../image/Monstres/Lumiere/Nigong_Icon.png" /></a>
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Yeonhong_Icon.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Julianne_Icon.png" /></a>
+            <a><img class="efrei" title="YEONHONG" src="../image/Monstres/Lumiere/Yeonhong_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Amarna_Icon.png" /></a>
-
+            <a><img class="efrei" title="JULIANNE" src="../image/Monstres/Lumiere/Julianne_Icon.png" /></a>
         </div>
-
-
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Hwadam_Icon.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Iona_Icon.png" /></a>
+            <a><img class="efrei" title="AMARNA" src="../image/Monstres/Lumiere/Amarna_Icon.png" /></a>
 
         </div>
 
 
 
-
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Kabilla_Icon.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Mihael_Icon.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Teon_Icon.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Ahman_Icon.png" /></a>
-
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Belladeon_Icon.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Darion_Icon.png" /></a>
+            <a><img class="efrei" title="HWADAM" src="../image/Monstres/Lumiere/Hwadam_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Eshir_Icon.png" /></a>
+            <a><img class="efrei" title="IONA" src="../image/Monstres/Lumiere/Iona_Icon.png" /></a>
+
+        </div>
+
+
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="KABILLA" src="../image/Monstres/Lumiere/Kabilla_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="MIHAEL" src="../image/Monstres/Lumiere/Mihael_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="TEON" src="../image/Monstres/Lumiere/Teon_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="AHMAN" src="../image/Monstres/Lumiere/Ahman_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Fran_Icon.png" /></a>
+            <a><img class="efrei" title="BELLADEON" src="../image/Monstres/Lumiere/Belladeon_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="DARION" src="../image/Monstres/Lumiere/Darion_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="ESHIR" src="../image/Monstres/Lumiere/Eshir_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="FRAN" src="../image/Monstres/Lumiere/Fran_Icon.png" /></a>
         </div>
 
 
@@ -261,44 +261,44 @@
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Pontos_Icon.png" /></a>
+            <a><img class="efrei" title="PONTOS" src="../image/Monstres/Lumiere/Pontos_Icon.png" /></a>
         </div>
 
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Tian_Lang_Icon.png" /></a>
+            <a><img class="efrei" title="TIAN LANG" src="../image/Monstres/Lumiere/Tian_Lang_Icon.png" /></a>
         </div>
 
 
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Isis_Icon.png" /></a>
+            <a><img class="efrei" title="ISIS" src="../image/Monstres/Lumiere/Isis_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Laima_Icon.png" /></a>
+            <a><img class="efrei" title="LAIMA" src="../image/Monstres/Lumiere/Laima_Icon.png" /></a>
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Lora_Icon.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Gemini_Icon.png" /></a>
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Iris_Icon.png" /></a>
-
+            <a><img class="efrei" title="LORA" src="../image/Monstres/Lumiere/Lora_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Lumiere/Loren.png" /></a>
+            <a><img class="efrei" title="GEMINI" src="../image/Monstres/Lumiere/Gemini_Icon.png" /></a>
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="IRIS" src="../image/Monstres/Lumiere/Iris_Icon.png" /></a>
+
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="LOREN" src="../image/Monstres/Lumiere/Loren.png" /></a>
         </div>
 
 
