--- a/SRC/Tenebre.html
+++ b/SRC/Tenebre.html
@@ -47,37 +47,26 @@
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Craka_Icon.png" /></a>
+            <a><img class="efrei" title="CRAKA" src="../image/Monstres/Tenebre/Craka_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Grogen_Icon.png" /></a>
+            <a><img class="efrei" title="GROGEN" src="../image/Monstres/Tenebre/Grogen_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Han_Icon.png" /></a>
-
-        </div>
-
-
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Jaara_Icon.png" /> </a>
+            <a><img class="efrei" title="HAN" src="../image/Monstres/Tenebre/Han_Icon.png" /></a>
 
         </div>
 
 
 
-
-
-
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Lydia_Icon.png" /></a>
+            <a><img class="efrei" title="JAARA" src="../image/Monstres/Tenebre/Jaara_Icon.png" /> </a>
 
         </div>
 
@@ -88,42 +77,53 @@
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Nyx_Icon.png" /></a>
+            <a><img class="efrei" title="LYDIA" src="../image/Monstres/Tenebre/Lydia_Icon.png" /></a>
+
+        </div>
+
+
+
+
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="NYX" src="../image/Monstres/Tenebre/Nyx_Icon.png" /></a>
 
         </div>
 
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Wolyung_Icon.png" /></a>
+            <a><img class="efrei" title="WOLYUNG" src="../image/Monstres/Tenebre/Wolyung_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Zeratu_Icon.png" /></a>
+            <a><img class="efrei" title="ZERATU" src="../image/Monstres/Tenebre/Zeratu_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Martina_Icon.png" /></a>
+            <a><img class="efrei" title="MARTINA" src="../image/Monstres/Tenebre/Martina_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/belita.png" /></a>
+            <a><img class="efrei" title="BELITA" src="../image/Monstres/Tenebre/belita.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Hrungnir_Icon.png" /></a>
+            <a><img class="efrei" title="HRUNGNIR" src="../image/Monstres/Tenebre/Hrungnir_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Fei_Icon.png" /></a>
+            <a><img class="efrei" title="FEI" src="../image/Monstres/Tenebre/Fei_Icon.png" /></a>
 
 
         </div>
@@ -131,14 +131,14 @@
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Miho_Icon.png" /></a>
+            <a><img class="efrei" title="MIHO" src="../image/Monstres/Tenebre/Miho_Icon.png" /></a>
         </div>
 
 
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Kro_Icon.png" /></a>
+            <a><img class="efrei" title="KRO" src="../image/Monstres/Tenebre/Kro_Icon.png" /></a>
 
         </div>
 
@@ -153,41 +153,41 @@
     <div id="ingenieur">
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Fermion_Icon.png" /></a>
+            <a><img class="efrei" title="FERMION" src="../image/Monstres/Tenebre/Fermion_Icon.png" /></a>
 
         </div>
 
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Mi_Ying_Icon.png" /></a>
+            <a><img class="efrei" title="MI YING" src="../image/Monstres/Tenebre/Mi_Ying_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Ragdoll_Icon.png" /></a>
+            <a><img class="efrei" title="RAGDOLL" src="../image/Monstres/Tenebre/Ragdoll_Icon.png" /></a>
 
         </div>
 
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Rahul_Icon.png" /></a>
+            <a><img class="efrei" title="RAHUL" src="../image/Monstres/Tenebre/Rahul_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Son_Zhang_Lao_Icon.png" /></a>
+            <a><img class="efrei" title="SON ZHANG LAO" src="../image/Monstres/Tenebre/Son_Zhang_Lao_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Trinite_Icon.png" /></a>
+            <a><img class="efrei" title="TRINITE" src="../image/Monstres/Tenebre/Trinite_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Jultan_Icon.png" /></a>
+            <a><img class="efrei" title="JULTAN" src="../image/Monstres/Tenebre/Jultan_Icon.png" /></a>
         </div>
 
 
@@ -207,38 +207,38 @@
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Veromos_Icon.png" /></a>
+            <a><img class="efrei" title="VEROMOS" src="../image/Monstres/Tenebre/Veromos_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Thebae_Icon.png" /></a>
+            <a><img class="efrei" title="THEBAE" src="../image/Monstres/Tenebre/Thebae_Icon.png" /></a>
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Amduat_Icon.png" /></a>
-
-        </div>
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Betta_Icon.png" /></a>
-
-        </div>
-
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Dias_Icon.png" /></a>
-        </div>
-
-        <div class="ingenieur1">
-
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Fregate_Icon.png" /></a>
+            <a><img class="efrei" title="AMDUAT" src="../image/Monstres/Tenebre/Amduat_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Icares_Icon.png" /></a>
+            <a><img class="efrei" title="BETTA" src="../image/Monstres/Tenebre/Betta_Icon.png" /></a>
+
+        </div>
+
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="DIAS" src="../image/Monstres/Tenebre/Dias_Icon.png" /></a>
+        </div>
+
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="FREGATE" src="../image/Monstres/Tenebre/Fregate_Icon.png" /></a>
+
+        </div>
+        <div class="ingenieur1">
+
+            <a><img class="efrei" title="ICARES" src="../image/Monstres/Tenebre/Icares_Icon.png" /></a>
 
         </div>
 
@@ -258,51 +258,51 @@
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Cadiz_Icon.png" /></a>
+            <a><img class="efrei" title="CADIZ" src="../image/Monstres/Tenebre/Cadiz_Icon.png" /></a>
 
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Giana_Icon.png" /></a>
+            <a><img class="efrei" title="GIANA" src="../image/Monstres/Tenebre/Giana_Icon.png" /></a>
 
         </div>
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Manannan_Icon.png" /></a>
+            <a><img class="efrei" title="MANANNAN" src="../image/Monstres/Tenebre/Manannan_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Nephthys_Icon.png" /></a>
+            <a><img class="efrei" title="NEPHTHYS" src="../image/Monstres/Tenebre/Nephthys_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Nicki_Icon.png" /></a>
+            <a><img class="efrei" title="NICKI" src="../image/Monstres/Tenebre/Nicki_Icon.png" /></a>
         </div>
 
 
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Woonsa_Icon.png" /></a>
+            <a><img class="efrei" title="WOONSA" src="../image/Monstres/Tenebre/Woonsa_Icon.png" /></a>
         </div>
 
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Basalt_Icon.png" /></a>
+            <a><img class="efrei" title="BASALT" src="../image/Monstres/Tenebre/Basalt_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Thrain_Icon.png" /></a>
+            <a><img class="efrei" title="THRAIN" src="../image/Monstres/Tenebre/Thrain_Icon.png" /></a>
         </div>
 
         <div class="ingenieur1">
 
-            <a><img class="efrei" src="../image/Monstres/Tenebre/Mantura_Icon.png" /></a>
+            <a><img class="efrei" title="MANTURA" src="../image/Monstres/Tenebre/Mantura_Icon.png" /></a>
         </div>
 
 
